--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
     <link href="css/style.min.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/portrait.css" rel="stylesheet" media="max-width: 480px">
 
     <script async src="js/GoogleAnalyticsObject.js"></script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
