--- a/project-2048.html
+++ b/project-2048.html
@@ -11,7 +11,7 @@
     <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
     <link href="css/style.min.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet" media="print">
 
     <script async src="js/googleAnalyticsObject.js"></script>
     <script src="//www.google-analytics.com/analytics.js"></script>
