--- a/project-webperf.html
+++ b/project-webperf.html
@@ -11,8 +11,9 @@
     <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
     <link href="css/style.min.css" rel="stylesheet">
-    <link href="css/print.css" rel="stylesheet" >
-
+    <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/portrait.css" rel="stylesheet" media="max-width: 480px">
+    
     <script async src="js/googleAnalyticsObject.js"></script>
     <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
